--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,57 @@
   --background-header-color: #ffffff;
   --background-second-color: #f5f4fa;
 }
+ul,
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 .body {
   color: var(--title-color);
   font-family: "Roboto", sans-serif;
 }
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* -- Section header -- */
 
 .header {
   background-color: var(--background-header-color);
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid #ececec;
+}
+.header-container,
+.nav {
+  display: flex;
+  align-items: center;
 }
 .header .logo {
   font-family: "Raleway", sans-serif;
@@ -29,59 +71,67 @@
 .header .logo-right {
   color: var(--title-color);
 }
-
-.navigator .link {
+.navigator {
+  display: flex;
+  margin-left: 93px;
+}
+.navigator .paragraph-navigator + .paragraph-navigator {
+  margin-left: 50px;
+}
+.link-navigator {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   color: var(--title-color);
   text-decoration: none;
 }
-.navigator .link.current {
+.link-navigator.current {
   color: var(--active-button-color);
 }
-.navigator .link:hover,
-.navigator .link:focus,
-.navigator .link:active {
+.link-navigator:hover,
+.link-navigator:focus,
+.link-navigator:active {
   color: var(--active-button-color);
 }
-.contacts .link {
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+.contacts .paragraph-contacts + .paragraph-contacts {
+  margin-left: 50px;
+}
+.link-contacts {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   color: var(--text-color);
   text-decoration: none;
 }
-
-.paragraph-contacts > .link:hover,
-.paragraph-contacts > .link:focus {
+.link-contacts:hover,
+.link-contacts:focus {
   color: var(--active-button-color);
 }
-
+.link-navigator,
+.link-contacts {
+  display: inline-flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .icon-mail {
-  box-sizing: content-box;
   width: 16px;
   height: 12px;
-  padding-right: 10px;
-  fill: #757575;
-  cursor: pointer;
+  margin-right: 10px;
+  fill: currentColor;
 }
-
 .icon-tel {
-  box-sizing: content-box;
   width: 10px;
   height: 16px;
-  padding-right: 10px;
-  fill: #757575;
-  cursor: pointer;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
-.icon-mail:hover,
-.icon-tel:hover,
-.icon-mail:focus,
-.icon-tel:focus {
-  fill: #2196f3;
-}
+/* -- Section hero -- */
 
 .hero {
   max-width: 1600px;
@@ -99,12 +149,22 @@
   background-size: cover;
   background-color: var(--background-footer-color);
 }
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
 .title-hero {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
   color: var(--background-header-color);
   text-align: center;
+}
+.title-hero {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  width: 696px;
 }
 .button-hero {
   background-color: var(--active-button-color);
@@ -116,18 +176,20 @@
   border-radius: 4px;
   border: 0;
 }
+.button-hero {
+  min-width: 200px;
+  padding: 10px 32px;
+  display: block;
+  margin: 0 auto;
+}
 .button-hero:hover,
 .button-hero:focus {
   background-color: var(--hover-button-color);
   color: var(--background-header-color);
 }
 
-.title-large {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  color: var(--title-color);
-}
+/* -- Section advantages -- */
+
 .title-advantages-list {
   font-weight: 700;
   font-size: 14px;
@@ -141,94 +203,95 @@
   color: var(--text-color);
   letter-spacing: 0.03em;
 }
-
-.paragraph-advantages::before {
-  display: block;
-  content: " ";
+.title-advantages-list {
+  margin-bottom: 10px;
+}
+.paragraph-advantages:not(:last-child) {
+  margin-right: 30px;
+}
+.paragraph-advantages {
+  max-width: 270px;
+}
+.box-advantages-list {
+  width: 270px;
   height: 120px;
-  border-radius: 4px;
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center;
   background-color: #f5f4fa;
   margin-bottom: 30px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-advantages {
+  width: 70px;
+  height: 70px;
+}
+/* -- total per section -- */
+
+.list-advantages,
+.list-presentation,
+.list-team,
+.list-customers {
+  display: flex;
+}
+.title-large {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  color: var(--title-color);
+}
+.title-large {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
-.icon-antenna::before {
-  background-image: url(../images/icons.svg/advantages/antenna.svg);
+/* -- Section presentation -- */
+
+.presentation-section {
+  padding-top: 0;
 }
-.icon-clock::before {
-  background-image: url(../images/icons.svg/advantages/clock.svg);
-}
-.icon-diagram::before {
-  background-image: url(../images/icons.svg/advantages/diagram.svg);
-}
-.icon-astronaut::before {
-  background-image: url(../images/icons.svg/advantages/astronaut.svg);
+.paragraph-presentation:not(:last-child) {
+  margin-right: 30px;
 }
 
+/* -- Section team -- */
+
+.team-section {
+  background-color: var(--background-second-color);
+}
 .paragraph-team {
   width: 270px;
-  height: 428px;
   background-color: #ffffff;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 }
-
-.list-team-messengers {
-  display: flex;
-  margin: 16px 32px 30px 32px;
+.paragraph-team:not(:last-child) {
+  margin-right: 30px;
 }
-
 .paragraph-team-messengers {
   width: 44px;
   height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50px;
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
-  content: " ";
 }
 .paragraph-team-messengers:not(:last-child) {
   margin-right: 10px;
 }
-
-.paragraph-team-messengers:hover,
-.paragraph-team-messengers:focus {
-  background-color: #2196f3;
+.list-team-messengers {
+  display: flex;
+  margin-top: 16px;
+  justify-content: center;
 }
-
-.icon-team {
-  box-sizing: content-box;
-  width: 20px;
-  height: 20px;
-  fill: #afb1b8;
-  cursor: pointer;
-  padding: 12px;
-}
-
-.icon-team:hover,
-.icon-team:focus {
-  fill: #ffffff;
-}
-
-.box-team-list {
-  text-decoration: none;
-}
-
-.team-section {
-  background-color: var(--background-second-color);
-}
-
 .title-team-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   color: var(--title-color);
+}
+.title-team-list {
+  margin-bottom: 10px;
 }
 .text-team-list {
   font-weight: 400;
@@ -236,6 +299,70 @@
   line-height: 1.2;
   color: var(--text-color);
 }
+.box-team-list {
+  text-decoration: none;
+}
+.box-team-list {
+  display: block;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: 0 auto;
+  text-align: center;
+}
+.team-messengers {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  fill: #afb1b8;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.team-messengers:hover,
+.team-messengers:focus {
+  background-color: #2196f3;
+  fill: #ffffff;
+}
+.icon-team {
+  width: 20px;
+  height: 20px;
+}
+
+/* -- Section customers -- */
+
+.paragraph-customers {
+  width: 170px;
+  height: 92px;
+}
+.paragraph-customers:not(:last-child) {
+  margin-right: 30px;
+}
+.customers-client {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  fill: #afb1b8;
+  cursor: pointer;
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.customers-client:hover,
+.customers-client:focus {
+  border-color: #2196f3;
+  fill: #2196f3;
+}
+.client {
+  width: 106px;
+  height: 60px;
+}
+
+/* -- Section customers -- */
+
 .button-portfolio {
   background-color: var(--background-second-color);
   font-weight: 500;
@@ -246,26 +373,54 @@
   border-radius: 4px;
   border: 0;
 }
+.button-portfolio {
+  padding: 6px 22px;
+}
 .button-portfolio:hover,
 .button-portfolio:focus {
   background-color: var(--active-button-color);
   color: var(--background-header-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
+.list-button,
+.list-portfolio {
+  display: flex;
+}
+.list-button {
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.paragraph-button-portfolio:not(:last-child) {
+  margin-right: 8px;
+}
 .card-portfolio {
   text-decoration: none;
+  display: block;
 }
-
-.paragraph-card-portfolio:hover,
-.paragraph-card-portfolio:focus {
-  width: 370px;
-  height: 404px;
-  border-color: 1px solid #eeeeee;
+.card-portfolio:hover,
+.card-portfolio:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
-
+.paragraph-card-portfolio {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.list-portfolio {
+  flex-wrap: wrap;
+}
+.list-portfolio {
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+.box-portfolio-list {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
+}
+.title-portfolio-list {
+  margin-bottom: 4px;
+}
 .title-portfolio-list {
   font-weight: 700;
   font-size: 18px;
@@ -278,10 +433,19 @@
   line-height: 1.9;
   color: var(--text-color);
 }
+
+/* -- Section customers -- */
+
 .footer {
   background-color: var(--background-footer-color);
 }
-
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer-container {
+  display: flex;
+}
 .footer .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -293,6 +457,15 @@
 .footer .logo-right {
   color: var(--background-header-color);
 }
+.footer-address {
+  width: 235px;
+}
+.address {
+  margin-top: 20px;
+}
+.paragraph-address:not(:last-child) {
+  margin-bottom: 9px;
+}
 .address .link {
   font-weight: 400;
   font-size: 14px;
@@ -302,6 +475,9 @@
   font-style: normal;
 }
 .link-address {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
   color: var(--background-header-color);
   text-decoration: none;
   font-style: normal;
@@ -311,255 +487,44 @@
   color: var(--background-header-color);
 }
 
+.footer-messengers {
+  margin-left: 70px;
+}
 .title-messengers {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   color: var(--background-header-color);
 }
-
-ul,
-p,
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-.container {
-  width: 1200px;
-  padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.header-container,
-.nav {
-  display: flex;
-  align-items: center;
-}
-.navigator {
-  display: flex;
-  margin-left: 93px;
-}
-.contacts {
-  display: flex;
-  margin-left: auto;
-}
-.navigator .paragraph-navigator + .paragraph-navigator {
-  margin-left: 50px;
-}
-.contacts .paragraph-contacts + .paragraph-contacts {
-  margin-left: 50px;
-}
-.paragraph-navigator > .link,
-.paragraph-contacts > .link {
-  display: inline-flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.title-hero {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  width: 696px;
-}
-.button-hero {
-  min-width: 200px;
-  padding: 10px 32px;
-  display: block;
-  margin: 0 auto;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.paragraph-advantages:not(:last-child) {
-  margin-right: 30px;
-}
-.paragraph-advantages {
-  max-width: 270px;
-}
-.title-advantages-list {
-  margin-bottom: 10px;
-}
-.list-advantages,
-.list-presentation,
-.list-team,
-.list-customers {
-  display: flex;
-}
-.title-large {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.presentation-section {
-  padding-top: 0;
-}
-.paragraph-presentation:not(:last-child) {
-  margin-right: 30px;
-}
-.paragraph-team:not(:last-child) {
-  margin-right: 30px;
-}
-.box-team-list {
-  display: block;
-  padding-top: 30px;
-  padding-bottom: 16px;
-  margin: 0 auto;
-  text-align: center;
-}
-.title-team-list {
-  margin-bottom: 10px;
-}
-
-.list-button,
-.list-portfolio {
-  display: flex;
-}
-.list-portfolio {
-  flex-wrap: wrap;
-}
-.list-button {
-  margin-bottom: 50px;
-  justify-content: center;
-}
-.paragraph-button-portfolio:not(:last-child) {
-  margin-right: 8px;
-}
-.button-portfolio {
-  padding: 6px 22px;
-}
-.box-portfolio-list {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-  border-top: 0;
-}
-.title-portfolio-list {
-  margin-bottom: 4px;
-}
-.paragraph-card-portfolio {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.list-portfolio {
-  margin-right: -30px;
-  margin-bottom: -30px;
-}
-
-.paragraph-customers:not(:last-child) {
-  margin-right: 30px;
-}
-
-.paragraph-customers {
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-
-  cursor: pointer;
-}
-.paragraph-customers:hover,
-.paragraph-customers:focus {
-  border-color: #2196f3;
-}
-
-.client {
-  box-sizing: content-box;
-  width: 106px;
-  height: 60px;
-  fill: #afb1b8;
-  cursor: pointer;
-  padding: 16px 32px;
-}
-.client:hover,
-.client:focus {
-  fill: #2196f3;
-}
-
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.footer-container {
-  display: flex;
-}
-
-.address {
-  margin-top: 20px;
-}
-.paragraph-address:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer-address {
-  width: 235px;
-}
-
-.footer-messengers {
-  margin-left: 70px;
-  margin-top: 12px;
-  width: 206px;
-}
-
 .list-messengers {
   display: flex;
   margin-top: 20px;
+  justify-content: center;
 }
-
 .paragraph-messengers {
   width: 44px;
   height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50px;
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
-  content: " ";
 }
 .paragraph-messengers:not(:last-child) {
   margin-right: 10px;
 }
-
-.paragraph-messengers:hover,
-.paragraph-messengers:focus {
+.link-messengers {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  fill: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-messengers:hover,
+.link-messengers:focus {
   background-color: #2196f3;
+  fill: #ffffff;
 }
 .icon {
-  box-sizing: content-box;
   width: 20px;
   height: 20px;
-  fill: #ffffff;
-  cursor: pointer;
-  padding: 12px;
 }
